Mon Jan 22 15:38:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/Containers_T.h:
          ace/Containers_T.cpp:
          Added operator* to the ACE_Ordered_Multiset_Iterator class

        * tests/Ordmultiset_test.cpp
          Expanded test for the new operator* of the ACE_Ordered_Multiset_
          Iterator class

Sat Jan 20 14:53:07 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Configuration.{h,cpp}: Fixed some problems with const char *
	  that was busting the compilation.  Thanks to Carlos for pointing
 	  this out.

	* ace/Configuration.{h,cpp}: Added several fixes for
	  mistakes with memory management and other minor problems.
  	  Thanks to Jonathan Reis <reis@stentorsoft.com> for contributing
 	  these fixes!

Sat Jan 20 10:49:05 2001  Carlos O'Ryan  <coryan@uci.edu>

        * docs/ACE-guidelines.html:
          Update the guidelines to point people to the Doxygen
          documentation, instead of the now abandoned OSE tools.

Sat Jan 20 10:21:08 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/OS.cpp:
          Another pass fixing problems with ACE_BEGINTHREADEX() under
          Win32, this time Win32 is working fine.

Sat Jan 20 10:20:50 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * doc/tutorials: Integrated the new Service Configurator tutorial
          into the main tutorials page.

Fri Jan 19 16:57:43 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/Svc_Handler.h: Updated the comments to explain why
          operator new is overloaded.  Thanks to Kirill Kuolechov
          <Kirill.Koulechov@gmx.net> for reporting this.

Fri Jan 19 15:39:43 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/OS.cpp:
          QNX/RTP has the same problem that LynxOS has, after fork() is
          invoked trying to destroy the preallocated objects in
          ACE_OS_Object_Manager fails.
          Factor out this variation in a new macro: